[package]
name = "sphinx-bench"
version = "0.1.0"
authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sphinx = { git = "https://github.com/nymtech/sphinx", rev="fcd17932acbd21a76c42a4bf2a42b9f8668f7e1f" }

[profile.release]
debug=true

[[bin]]
name = "sphinx-bench-full"
path = "src/full/main.rs"

[[bin]]
name = "sphinx-bench-process"
path = "src/process/main.rs"