[package]
name = "sphinx-bench"
version = "0.1.0"
authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sphinx = { git = "https://github.com/nymtech/sphinx", rev="f8917fc790c7d78bc713123770e169f240eb1a47" }

[profile.release]
debug=true

[[bin]]
name = "sphinx-bench-full"
path = "src/full/main.rs"

[[bin]]
name = "sphinx-bench-process"
path = "src/process/main.rs"

[[bin]]
name = "sphinx-bench-fastmode"
path = "src/fastmode/main.rs"