[package]
name = "sphinx-bench"
version = "0.1.0"
authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sphinx = { git = "https://github.com/nymtech/sphinx", branch="key_reuse" }

[profile.release]
debug=true

[[bin]]
name = "sphinx-bench-full"
path = "src/full/main.rs"

[[bin]]
name = "sphinx-bench-process"
path = "src/process/main.rs"

[[bin]]
name = "sphinx-bench-create"
path = "src/create/main.rs"

[[bin]]
name = "sphinx-bench-create-key-reuse"
path = "src/create_key_reuse/main.rs"